--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends - KoKoA Clone</title>
+    <title>More - KoKoA Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -23,21 +23,17 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">친구</h1>
+      <h1 class="screen-header__title">더보기</h1>
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
         <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+        <span
+          ><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a
+        ></span>
       </div>
     </header>
 
-    <a id="friends-display-link"
-      ><i class="fa-solid fa-circle-info"></i> Friends 'Names Display'<i
-        class="fa-solid fa-chevron-right fa-xs"
-      ></i>
-    </a>
-
-    <main class="friends__screen">
+    <main class="main-screen more-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
@@ -46,33 +42,41 @@
           />
           <div class="user-component__text">
             <h4 class="user-component__title">김초롱</h4>
-            <!-- <h6 calss="user-component__subtitle">this text whatever</h6> -->
+            <h6 calss="user-component__subtitle">+82 010-1234-5678</h6>
           </div>
         </div>
-        <div class="user-component__column"></div>
+        <div class="user-component__column">
+          <i class="fa-regular fa-message fa-2x"></i>
+        </div>
       </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>채널</span>
-          <i class="fa-solid fa-chevron-up fa-xs"></i>
+      <div class="icon-row">
+        <div class="icon-row__icon">
+          <i class="fa-regular fa-calendar-check"></i><span>캘린더</span>
         </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="https://w.namu.la/s/20345488bc931532f2f00ef03d5962a6d79dd3dcd4b1e22d22f642a61005cd0a976d6183ca1713ba9603ecf7e8203e0dcf6d1c98bdff2e02060ccb5d401a7ce26915fc2909908a5c291bfcac3dbf60c8e7d40f1577c2529e36eb357fdf0f3a9e"
-              class="user-component__avatar user-component__avatar--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">
-                채널
-              </h4>
-              <!-- <h6 calss="user-component__subtitle">this text whatever</h6> -->
+        <div class="icon-row__icon">
+          <i class="fa-regular fa-face-smile"></i><span>이모티콘</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fa-solid fa-file-invoice-dollar"></i><span>계좌</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fa-solid fa-paint-roller"></i><span>테마</span>
+        </div>
+      </div>
+      <div class="more-suggestions">
+        <h4 class="more-suggestions__title">제안</h4>
+        <div class="more-suggestions__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fa-solid fa-quote-right"></i>
             </div>
+            <span class="more-suggestions__icon-text">KoKoA Story</span>
           </div>
-          <div class="user-component__column">
-            <div>
-              <span>2 <i class="fa-solid fa-chevron-right fa-xs"></i></span>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fa-solid fa-quote-right"></i>
             </div>
+            <span class="more-suggestions__icon-text">KoKoA Story</span>
           </div>
         </div>
       </div>
@@ -82,14 +86,15 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html">
-            <i class="fa-solid fa-user fa-2x"></i
+            <i class="fa-regular fa-user fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fa-regular fa-comment fa-2x"></i
-          ></a>
+            <i class="fa-regular fa-comment fa-2x"></i>
+            ></a
+          >
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="find.html"
